# Bunny_Polylla

./: CMakeLists.txt  Readme.md  plot.py
data/: Polylla.off  bunny2.off  liver.off  longest_edges.off  seed_edges.off
include/: mesh.hpp
src/: bunny.cpp  vhalfedges.cpp
